--- a/orbit-launcher-elite/orbit-elite/styling/style.css
+++ b/orbit-launcher-elite/orbit-elite/styling/style.css
@@ -1,6 +1,5 @@
 /* This CSS Is Ordered From Top Left - Bottom Right
 /* Global CSS */
-
 body, html {
   height: 100%;
   padding: 0;
@@ -143,7 +142,6 @@ input:checked[type="checkbox"]:before {
 
 /* End Of Checkbox CSS */
 /* Color Input CSS */
-
 input[type="color"] {
   -webkit-appearance: none;
   border: solid 2px #FFFFFF;
@@ -203,7 +201,6 @@ input[type="color"]::-webkit-color-swatch {
 
 /* End Of Color Input CSS */
 /*Modal CSS*/
-
 .modal {
   text-align: center;
   display: none;
@@ -351,13 +348,13 @@ input[type="color"]::-webkit-color-swatch {
 
 /* End Of Clock & Date CSS */
 /* Search Input CSS*/
-
 .form {
-  position:absolute;
+  position: absolute;
   left: 50%;
   top: 35%;
   transform: translate(-50%, -35%);
 }
+
 .omnibox {
   font-weight: 50;
   font-size: 28px;
@@ -491,7 +488,6 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 /* End Of Media Button CSS */
-
 .MiscText {
   position: absolute;
   font-size: 2.0vw;
@@ -908,7 +904,8 @@ input[type="color"]::-webkit-color-swatch {
   box-shadow: 0 5px 5px rgba(0, 0, 0, .2);
   border-radius: 100%;
   width: 50px !important;
-  height: 35px !important;
+  position: static;
+  height: 50px !important;
   font-size: 20px;
 }
 
@@ -967,7 +964,6 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 /* End of Settings CSS */
-
 * {
   box-sizing: border-box;
 }
@@ -998,39 +994,36 @@ input[type="color"]::-webkit-color-swatch {
   clear: both;
 }
 
-
 /* MAX WIDTH MEDIA QUERIES */
-
 @media screen and (max-width: 1200px) {
   h3 {
-      font-size: 10px;
+    font-size: 10px;
   }
 
   span, label {
-      font-size: 9.5px;
-    }
+    font-size: 9.5px;
+  }
 
   .btn i, .btn span {
-      line-height: 72.5px;
-      font-size: 25px;
+    line-height: 72.5px;
+    font-size: 25px;
   }
 
   #settingsOpen {
-     font-size: 30px;
+    font-size: 30px;
   }
 
-  #todoOpen, #rssOpen, #weatherOpen{
+  #todoOpen, #rssOpen, #weatherOpen {
     font-size: 17.5px;
   }
 
   .clock {
-     font-size: 45px;
+    font-size: 45px;
   }
 
   #OpenvisualSettings::after {
     content: none;
   }
-
 }
 
 .SettingsSelection {
@@ -1041,22 +1034,19 @@ input[type="color"]::-webkit-color-swatch {
   content: " Visual";
 }
 
-
 /* MAX WIDTH MEDIA QUERIES END */
 /* MIN WIDTH MEDIA QUERIES */
-
 @media screen and (min-width: 1200px) {
   #settingsOpen {
-     font-size: 35px;
+    font-size: 35px;
   }
 
-  #todoOpen, #rssOpen, #weatherOpen{
-     font-size: 22.5px;
+  #todoOpen, #rssOpen, #weatherOpen {
+    font-size: 22.5px;
   }
 }
 
 /* MIN WIDTH MEDIA QUERIES END */
-
 @keyframes font-size-increase {
   0% {
     font-size: 25px;
