--- a/orbit-launcher-elite/orbit-elite/styling/style.css
+++ b/orbit-launcher-elite/orbit-elite/styling/style.css
@@ -407,6 +407,15 @@ input[type="color"]::-webkit-color-swatch {
   min-width: 450px;
 }
 
+#middle2 {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 70%;
+  transform: translate(-50%, -70%);
+  min-width: 450px;
+}
+
 .btn {
   display: none;
   height: 7vw;
