--- a/orbit-launcher-elite/orbit-elite/styling/style.css
+++ b/orbit-launcher-elite/orbit-elite/styling/style.css
@@ -1178,3 +1178,23 @@ input:checked[type="radio"] + .sdBTN{
   top: -10%;
   left: -10%;
 }
+
+.animateDevil {
+  animation-name: rainbow;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rainbow {
+  0% {
+    color: red;
+  }
+
+  50% {
+    color: blue;
+  }
+
+  100% {
+    color: green;
+  }
+}
